--- a/public/backend/style.css
+++ b/public/backend/style.css
@@ -7,3 +7,12 @@
     right: 0px; 
     color: inherit;
 }
+div#show-image-add {
+    display: none;
+    position: absolute;
+    background: red;
+    top: -170%;
+    z-index: 100;
+    left: 30%;
+    border-radius: 5px;
+}
