--- a/public/frontend/assets/css/responsive.css
+++ b/public/frontend/assets/css/responsive.css
@@ -92,6 +92,9 @@
     a.show-login-customer {
         color: #fff !important;
     }
+    .block_list_cart {
+        width: 100%;
+    }
 }
 
 @media (min-width:768px) and (max-width: 1024px) {}
