--- a/public/frontend/style.css
+++ b/public/frontend/style.css
@@ -164,13 +164,22 @@ img.img-responsive {
 .action-add-cart h3 a:hover .action-add-cart h3 {
     background: #cccccc;
 }
-.load-more {
+.load-more-home {
     text-align: center;
     margin-bottom: 40px;
     margin-top: 40px;
+
 }
-.load-more a {
+.load-more-home a {
     text-decoration: none;
+    width: 100%;
+    padding: 10px 20px;
+    color: #fff;
+    font-size: 14px;
+    font-weight: 700;
+    border-radius: 5px;
+    /* cursor: default; */
+    background: linear-gradient(to bottom,#00803d 0%,#00a14d 100%);
 }
 .pagination>.active>a, .pagination>.active>a:focus, .pagination>.active>a:hover, .pagination>.active>span, .pagination>.active>span:focus, .pagination>.active>span:hover {
     z-index: 3;
